--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore simplecov directory
 coverage
+
+# Ignore application configuration
+/config/application.yml
