--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/User_Story_8/takes_user_to_movies_index_with_movies_by_keyword_when_button_is_clicked.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/User_Story_8/takes_user_to_movies_index_with_movies_by_keyword_when_button_is_clicked.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/search/movie?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US&page=1&query=Lock,%20Stock%20and%20Two%20Smoking%20Barrels
+    uri: https://api.themoviedb.org/3/search/movie?api_key=DONT_SHARE_MY_SECRET_KEY&include_adult=false&language=en-US&page=1&query=Lock,%20Stock%20and%20Two%20Smoking%20Barrels
     body:
       encoding: US-ASCII
       string: ''
@@ -25,19 +25,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 10 May 2023 17:50:23 GMT
+      - Wed, 10 May 2023 22:43:21 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=22006
+      - public, max-age=26478
       X-Memc:
       - HIT
       X-Memc-Key:
-      - 7e7553767108de15ea377b5c461bbf27
+      - 129a0b8f8ce1c8689149f00e914aa3d0
       X-Memc-Age:
-      - '16098'
+      - '20299'
       X-Memc-Expires:
-      - '10642'
+      - '6367'
       Etag:
       - W/"ed0e1a0ced3d27ff0e69b80ef660eb5a"
       Vary:
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 acb55e8d2b8ad7df45561a8bccaaa688.cloudfront.net (CloudFront)
+      - 1.1 b86386058101394cf48b049b58f8d788.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN52-P3
+      - DEN52-P1
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - uDytI5BixqXiBmD6Va6ZMTSD21kxoTgDwXARBtLIe2qrnHkWXA5GsA==
+      - 6eldPNA4TbLszAY76Th8J0brIMBpKSPEBvdus3Nn0ENfLBfqIP-K4w==
       Age:
-      - '296'
+      - '3271'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -68,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Wed, 10 May 2023 17:55:19 GMT
+  recorded_at: Wed, 10 May 2023 23:37:52 GMT
 recorded_with: VCR 6.1.0
